--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -5,37 +5,99 @@
   padding-top: 43px;
   &__navigation {
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 54px;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
+    border-bottom: 1px solid $border-color;
+    @include for-large-up {
+      flex-direction: row;
+      align-items: flex-start;
+      margin-bottom: 54px;
+      border-bottom: none;
+    }
+  }
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    padding-left: 0;
+    padding-right: 0;
+    @include for-large-up {
+      flex-direction: row;
+      padding-left: 130px;
+      padding-right: 130px;
+    }
   }
 
   &__description {
+    display: none;
     margin-top: 22px;
     margin-bottom: 31px;
     color: $text-color-secondary;
     line-height: 26px;
+    @include for-large-up {
+      display: block;
+    }
   }
 
   &__line {
+    display: none;
     border: 1px solid $text-color-primary;
     opacity: 0.1;
+    @include for-large-up {
+      display: block;
+    }
   }
 
   &__links {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     justify-content: space-between;
     height: 50px;
+    @include for-large-up {
+      flex-direction: row;
+      align-items: center;
+    }
+  }
+}
+.footer-logo {
+  flex-direction: column;
+  text-align: center;
+  @include for-large-up {
+    flex-direction: row;
+    text-align: left;
+  }
+  &__img {
+    margin-right: 0;
+    margin-bottom: 20px;
+    @include for-large-up {
+      margin-right: 9px;
+      margin-bottom: 0;
+    }
+  }
+  &__text {
+    margin-bottom: 31px;
+    @include for-large-up {
+      margin-bottom: 0;
+    }
   }
 }
 
 .about__company {
-  flex-basis: 33%;
-  margin-right: 110px;
+  width: 73%;
+  margin-right: 0;
+  @include for-large-up {
+  }
 }
 
 .downloads {
   display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
+  @include for-large-up {
+    justify-content: start;
+    margin-bottom: 0;
+  }
   &__img_appleapp {
     width: 135px;
     height: 40px;
@@ -54,9 +116,27 @@
 
 .additional-navigation {
   display: flex;
-  flex-grow: 1;
+  flex-direction: column;
+  margin-right: 0;
+  margin-bottom: 30px;
+  padding-left: 15px;
+  @include for-large-up {
+    flex-direction: row;
+    width: 93%;
+    margin-right: 86px;
+    margin-bottom: 0;
+    padding-left: 0;
+  }
+  &__column {
+    flex: 1;
+  }
   &__column:not(:last-child) {
-    margin-right: 90px;
+    margin-right: 0;
+    margin-bottom: 7px;
+    @include for-large-up {
+      margin-right: 29px;
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -82,6 +162,10 @@
 }
 
 .terms {
+  margin-bottom: 31px;
+  @include for-large-up {
+    margin-bottom: 0;
+  }
   &__links {
     color: $text-color-secondary;
     font-size: 14px;
@@ -98,6 +182,10 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
+  padding-bottom: 23px;
+  @include for-large-up {
+    padding-bottom: 0;
+  }
   &__item:not(:last-child) {
     margin-right: 20px;
   }
