--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -5,21 +5,23 @@
   font-weight: 700;
 }
 .headline {
+  @include adaptiv-padding-left(130, 0);
+  @include adaptiv-padding-right(130, 0);
   &__wrapper {
-    padding-top: 36px;
-    padding-bottom: 36px;
-    @include for-large-up {
-      padding-top: 77px;
-      padding-bottom: 77px;
-    }
+    @include adaptiv-padding-top(77, 36);
+    @include adaptiv-padding-bottom(77, 36);
   }
 
   &__content {
     max-width: 100%;
     z-index: 1;
+    padding-left: 15px;
+    padding-right: 15px;
     @include for-large-up {
       position: absolute;
       max-width: 754px;
+      padding-left: 0;
+      padding-right: 0;
       z-index: 1;
     }
   }
