--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -60,7 +60,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 262px;
+    width: 100%;
     height: 300px;
     background-color: $bc-color-white;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05),
@@ -68,6 +68,9 @@
     border-radius: 8px;
     transition: background-color 0.5s;
     cursor: pointer;
+    @include for-large-up {
+      width: 262px;
+    }
     &:hover {
       background-color: $bc-color-accent;
     }
