--- a/styles/order.scss
+++ b/styles/order.scss
@@ -15,8 +15,8 @@
   }
   &__img {
     margin-bottom: 40px;
-    padding-right: 50px;
-    padding-left: 50px;
+    padding-right: 45px;
+    padding-left: 45px;
     max-width: 100%;
     @include for-tablet {
       margin-bottom: 0;
@@ -34,7 +34,7 @@
     margin-left: -85px;
   }
   &__title {
-    margin-bottom: 19px;
+    margin-bottom: 18px;
     font-weight: 700;
     font-size: 40px;
     line-height: 40px;
@@ -45,10 +45,15 @@
     }
   }
   &__text {
-    margin-bottom: 26px;
+    width: 92%;
+    margin-bottom: 70px;
     font-size: 22px;
     line-height: 32px;
+    @include for-large-up {
+      margin-bottom: 26px;
+    }
   }
+
   &__input-elements {
     display: flex;
     flex-direction: column;
@@ -72,6 +77,7 @@
     }
     &::placeholder {
       color: $text-color-primary;
+      text-align: center;
     }
   }
   &__terms-description {
