--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -2,7 +2,7 @@ $text-color-primary: #2b292d;
 $text-color-secondary: #2b292d99;
 $text-color-orange: #f1592b;
 $text-color-green: #009b4d;
-$text-color-lightblue: #edf8fb;
+$text-color-lightblue: #00a1c612;
 $text-color-darkblue: #3040c4;
 $text-color-blue: #3141c5;
 $text-color-active-btn: #f5c651;
