--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -84,10 +84,13 @@
   }
 
   &__img {
-    padding-bottom: 16px;
+    height: 100%;
+    padding-top: 22px;
+    padding-bottom: 22px;
   }
 
   &__img-capture {
+    padding-bottom: 33px;
     font-weight: 700;
     font-size: 22px;
     line-height: 28px;
