--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -5,11 +5,21 @@
   font-weight: 700;
 }
 .headline {
-  @include adaptiv-padding-left(130, 0);
-  @include adaptiv-padding-right(130, 0);
+  max-width: 1400px;
+  padding-left: 0;
+  padding-right: 0;
+  margin: 0 auto;
+  @include for-large-up {
+    padding-left: 130px;
+    padding-right: 130px;
+  }
   &__wrapper {
-    @include adaptiv-padding-top(77, 36);
-    @include adaptiv-padding-bottom(77, 36);
+    padding-top: 36px;
+    padding-bottom: 36px;
+    @include for-large-up {
+      padding-top: 77px;
+      padding-bottom: 77px;
+    }
   }
 
   &__content {
@@ -28,11 +38,12 @@
 
   &__title {
     margin-bottom: 24px;
+    font-size: 50px;
     @include for-large-up {
       margin-top: -2px;
       margin-bottom: 33px;
-      @include adaptiv-width(700, 290);
       height: 165px;
+      font-size: 80px;
       letter-spacing: -0.5px;
     }
   }
