--- a/styles/global.scss
+++ b/styles/global.scss
@@ -12,9 +12,9 @@ h4 {
   line-height: 1;
 }
 
-h2 {
-  @include adaptiv-font(56, 40);
-}
+// h2 {
+//   @include adaptiv-font(56, 40);
+// }
 
 p {
   margin: 0;
