--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,6 @@ h4 {
   line-height: 1;
 }
 
-h2 {
-  font-size: calc(
-    40px + 16 * ((100vw - 320px) / 1080)
-  );
-}
-
 p {
   margin: 0;
 }
@@ -105,12 +99,6 @@ h4 {
   margin: 0;
   font-weight: 700;
   line-height: 1;
-}
-
-h2 {
-  font-size: calc(
-    40px + 16 * ((100vw - 320px) / 1080)
-  );
 }
 
 p {
@@ -478,12 +466,6 @@ h4 {
   line-height: 1;
 }
 
-h2 {
-  font-size: calc(
-    40px + 16 * ((100vw - 320px) / 1080)
-  );
-}
-
 p {
   margin: 0;
 }
@@ -606,6 +588,7 @@ button {
 .headline__title {
   margin-bottom: 24px;
   font-size: 50px;
+  letter-spacing: -0.31px;
 }
 @media screen and (min-width: 650px) {
   .headline__title {
@@ -1004,8 +987,14 @@ button {
   color: #009b4d;
 }
 .features__title {
+  font-size: 40px;
   margin-bottom: 30px;
   letter-spacing: -0.5px;
+}
+@media screen and (min-width: 650px) {
+  .features__title {
+    font-size: 56px;
+  }
 }
 .features__description {
   margin-bottom: 42px;
@@ -1178,13 +1167,16 @@ button {
 .inbox__title {
   margin-bottom: 18px;
   padding: 0;
-  letter-spacing: -0.5px;
+  font-size: 40px;
+  letter-spacing: -0.36px;
 }
 @media screen and (min-width: 650px) {
   .inbox__title {
     margin-bottom: 30px;
     padding-left: 30px;
     padding-right: 30px;
+    font-size: 56px;
+    letter-spacing: -0.5px;
   }
 }
 .inbox__text {
@@ -1306,12 +1298,15 @@ button {
   }
 }
 .communication__title {
+  font-size: 40px;
   margin-bottom: 18px;
-  letter-spacing: -0.5px;
+  letter-spacing: -0.36px;
 }
 @media screen and (min-width: 650px) {
   .communication__title {
     margin-bottom: 30px;
+    font-size: 56px;
+    letter-spacing: -0.5px;
   }
 }
 .communication__top-text {
@@ -1447,11 +1442,14 @@ button {
 }
 .audience__title {
   margin-bottom: 18px;
-  letter-spacing: -0.5px;
+  font-size: 40px;
+  letter-spacing: -0.36px;
 }
 @media screen and (min-width: 650px) {
   .audience__title {
     margin-bottom: 30px;
+    font-size: 56px;
+    letter-spacing: -0.5px;
   }
 }
 .audience__text {
@@ -1670,10 +1668,14 @@ button {
 }
 .hiring__title {
   margin-bottom: 18px;
+  font-size: 40px;
+  letter-spacing: -0.36px;
 }
 @media screen and (min-width: 650px) {
   .hiring__title {
     margin-bottom: 20px;
+    font-size: 56px;
+    letter-spacing: -0.5px;
   }
 }
 .hiring__about-text {
@@ -1963,7 +1965,8 @@ button {
 .tip__title {
   margin-bottom: 13px;
   padding: 0 15px;
-  letter-spacing: -0.357px;
+  font-size: 40px;
+  letter-spacing: -0.36px;
 }
 .tip__description {
   padding: 0 15px;
