--- a/styles/communication.scss
+++ b/styles/communication.scss
@@ -54,10 +54,13 @@
   }
 
   &__title {
+    font-size: 40px;
     margin-bottom: 18px;
-    letter-spacing: -0.5px;
+    letter-spacing: -0.36px;
     @include for-large-up {
       margin-bottom: 30px;
+      font-size: 56px;
+      letter-spacing: -0.5px;
     }
   }
 
