--- a/styles/features.scss
+++ b/styles/features.scss
@@ -37,8 +37,12 @@
   }
 
   &__title {
+    font-size: 40px;
     margin-bottom: 30px;
     letter-spacing: -0.5px;
+    @include for-large-up {
+      font-size: 56px;
+    }
   }
 
   &__description {
