--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -39,6 +39,7 @@
   &__title {
     margin-bottom: 24px;
     font-size: 50px;
+    letter-spacing: -0.31px;
     @include for-large-up {
       margin-top: -2px;
       margin-bottom: 33px;
