--- a/styles/hiring.scss
+++ b/styles/hiring.scss
@@ -17,8 +17,12 @@
 
   &__title {
     margin-bottom: 18px;
+    font-size: 40px;
+    letter-spacing: -0.36px;
     @include for-large-up {
       margin-bottom: 20px;
+      font-size: 56px;
+      letter-spacing: -0.5px;
     }
   }
 
