--- a/styles/inbox.scss
+++ b/styles/inbox.scss
@@ -67,11 +67,14 @@
   &__title {
     margin-bottom: 18px;
     padding: 0;
-    letter-spacing: -0.5px;
+    font-size: 40px;
+    letter-spacing: -0.36px;
     @include for-large-up {
       margin-bottom: 30px;
       padding-left: 30px;
       padding-right: 30px;
+      font-size: 56px;
+      letter-spacing: -0.5px;
     }
   }
 
