--- a/styles/tips.scss
+++ b/styles/tips.scss
@@ -22,7 +22,8 @@
   &__title {
     margin-bottom: 13px;
     padding: 0 15px;
-    letter-spacing: -0.357px;
+    font-size: 40px;
+    letter-spacing: -0.36px;
   }
   &__description {
     padding: 0 15px;
