add change to audience

--- a/styles/communication.scss
+++ b/styles/communication.scss
@@ -47,7 +47,7 @@
     font-weight: 700;
     font-size: 22px;
     line-height: 34px;
-    color: $text-color-lightblue;
+    color: $text-color-lazur;
     @include for-large-up {
       margin-bottom: 24px;
     }
