--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -8,6 +8,7 @@ $text-color-blue: #3141c5;
 $text-color-active-btn: #f5c651;
 $text-color-active-learbtn: #ed526d;
 $text-color-hover-link: $text-color-darkblue;
+$text-color-lazur: #0189d1;
 
 $bc-color-accent: #3141c5;
 $bc-color-darkblue: #3040c4;
