--- a/styles.css
+++ b/styles.css
@@ -1290,7 +1290,7 @@ button {
   font-weight: 700;
   font-size: 22px;
   line-height: 34px;
-  color: rgba(0, 161, 198, 0.0705882353);
+  color: #0189d1;
 }
 @media screen and (min-width: 650px) {
   .communication__subtitle {
@@ -1496,6 +1496,7 @@ button {
 .audience__item:hover {
   background-color: #3141c5;
   color: #fff;
+  box-shadow: 0px 13px 18px rgba(0, 0, 0, 0.15), 0px 11px 55px rgba(0, 0, 0, 0.07);
 }
 .audience__item:not(:last-child) {
   margin-bottom: 15px;
