--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -77,6 +77,8 @@
     &:hover {
       background-color: $bc-color-accent;
       color: $bc-color-white;
+      box-shadow: 0px 13px 18px rgba(0, 0, 0, 0.15),
+        0px 11px 55px rgba(0, 0, 0, 0.07);
     }
     &:not(:last-child) {
       margin-bottom: 15px;
