--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -163,8 +163,12 @@
 
 .terms {
   margin-bottom: 31px;
+  padding-top: 13px;
+  padding-bottom: 17px;
   @include for-large-up {
     margin-bottom: 0;
+    padding-top: 0;
+    padding-bottom: 0;
   }
   &__links {
     font-size: 14px;
@@ -181,10 +185,12 @@
   display: flex;
   margin: 0;
   padding: 0;
+  padding-top: 0;
   padding-bottom: 23px;
   list-style-type: none;
   @include for-large-up {
-    padding-bottom: 0;
+    padding-top: 17px;
+    padding-bottom: 16px;
   }
   &__item:not(:last-child) {
     margin-right: 20px;
