--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 .audience {
-  @include adaptiv-padding-top(110, 50);
-  @include adaptiv-padding-bottom(110, 50);
+  padding-top: 50px;
+  padding-bottom: 50px;
   background-color: $bc-color-lightskyblue;
   @include for-large-up {
     padding-top: 110px;
