--- a/styles/tips.scss
+++ b/styles/tips.scss
@@ -36,6 +36,7 @@
     flex-direction: column;
     align-items: center;
     padding: 0 15px;
+    margin: 0;
     margin-bottom: 40px;
   }
   &__image {
