try change pt in headline wrapper

--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -14,7 +14,7 @@
     padding-right: 130px;
   }
   &__wrapper {
-    padding-top: 36px;
+    // padding-top: 36px;
     padding-bottom: 36px;
     @include for-large-up {
       padding-top: 77px;
