--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -75,6 +75,9 @@
       width: 262px;
     }
     &:hover {
+      @media (any-pointer: coarse) {
+        color: $bc-color-white;
+      }
       background-color: $bc-color-accent;
       color: $bc-color-white;
       box-shadow: 0px 13px 18px rgba(0, 0, 0, 0.15),
