--- a/styles.css
+++ b/styles.css
@@ -1488,17 +1488,17 @@ button {
   color: #fff;
   box-shadow: 0px 13px 18px rgba(0, 0, 0, 0.15), 0px 11px 55px rgba(0, 0, 0, 0.07);
 }
-@media (any-pointer: coarse) {
-  .audience__item:hover {
-    color: #fff;
-  }
-}
 .audience__item:not(:last-child) {
   margin-bottom: 15px;
 }
 @media screen and (min-width: 650px) {
   .audience__item:not(:last-child) {
     margin-bottom: 0;
+  }
+}
+@media (any-pointer: coarse) {
+  .audience .audience__item:hover {
+    color: #fff;
   }
 }
 .audience__img {
