--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -75,9 +75,6 @@
       width: 262px;
     }
     &:hover {
-      @media (any-pointer: coarse) {
-        color: $bc-color-white;
-      }
       background-color: $bc-color-accent;
       color: $bc-color-white;
       box-shadow: 0px 13px 18px rgba(0, 0, 0, 0.15),
@@ -88,6 +85,11 @@
       @include for-large-up {
         margin-bottom: 0;
       }
+    }
+  }
+  @media (any-pointer: coarse) {
+    .audience__item:hover {
+      color: $bc-color-white;
     }
   }
 
