--- a/styles.css
+++ b/styles.css
@@ -634,6 +634,7 @@ button {
 .headline__banner {
   display: block;
   max-width: 100%;
+  height: 100%;
 }
 @media screen and (min-width: 650px) {
   .headline__banner {
