--- a/styles/communication.scss
+++ b/styles/communication.scss
@@ -28,17 +28,19 @@
     flex-direction: column;
     flex-basis: 462px;
   }
+
   &__decor {
-    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 0;
+    margin-bottom: 40px;
+    margin-left: 0;
     margin-right: 0;
     @include for-large-up {
       margin-right: 62px;
-    }
-  }
-  &__img {
-    max-width: 100%;
-    @include for-large-up {
-      max-width: auto;
+      margin-top: -12px;
+      margin-bottom: 0;
     }
   }
 
@@ -79,21 +81,19 @@
     }
   }
 
-  &__decor {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 40px;
+  &__img {
+    max-width: 100%;
+    margin-bottom: 17px;
     @include for-large-up {
-      margin-bottom: 0;
+      max-width: auto;
     }
   }
 
-  &__img {
-    margin-bottom: 17px;
-    @include for-large-up {
-      margin-bottom: 0;
-    }
+  &__img-capture {
+    text-align: center;
+    color: $text-color-secondary;
+    font-size: 14px;
+    line-height: 22px;
   }
 
   &__decor-line {
@@ -111,13 +111,6 @@
     @include for-large-up {
       display: none;
     }
-  }
-
-  &__img-capture {
-    text-align: center;
-    color: $text-color-secondary;
-    font-size: 14px;
-    line-height: 22px;
   }
 
   &__bottom {
