--- a/styles/features.scss
+++ b/styles/features.scss
@@ -133,6 +133,7 @@
     @include for-feature-section {
       position: static;
       max-width: 100%;
+      margin: auto;
     }
     position: absolute;
     top: 0;
