--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -5,7 +5,7 @@
   font-weight: 700;
 }
 .headline {
-  max-width: 1400px;
+  max-width: 100%;
   padding-left: 0;
   padding-right: 0;
   background-color: $bc-color-pink;
