--- a/styles.css
+++ b/styles.css
@@ -547,7 +547,7 @@ button {
 }
 
 .headline {
-  max-width: 1400px;
+  max-width: 100%;
   padding-left: 0;
   padding-right: 0;
   background-color: #f3c6bd;
@@ -1089,6 +1089,7 @@ button {
   .features__banner {
     position: static;
     max-width: 100%;
+    margin: auto;
   }
 }
 
