--- a/styles.css
+++ b/styles.css
@@ -1097,6 +1097,7 @@ button {
   padding-top: 50px;
   padding-bottom: 50px;
   background-color: #fcf0e3;
+  overflow: hidden;
 }
 @media screen and (min-width: 650px) {
   .inbox {
