--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -21,7 +21,7 @@ $bc-color-pink: #f3c6bd;
 $border-color: #2b292d3b;
 $burger-btn-color: #2c3241a4;
 $burger-btn-color-active: $text-color-active-learbtn;
-$md: 650px;
+$md: 921px;
 $sm: 450px;
 $fs: 1300px;
 $tablet: 920px;
@@ -60,30 +60,22 @@ $maxWidth: 1400;
 @mixin adaptiv-width($pcSize, $mobSize) {
   $addSize: $pcSize - $mobSize;
   $maxWidth: $maxWidth - 320;
-  width: calc(
-    #{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth})
-  );
+  width: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth}));
 }
 
 @mixin adaptiv-margin-right($pcSize, $mobSize) {
   $addSize: $pcSize - $mobSize;
   $maxWidth: $maxWidth - 320;
-  margin-right: calc(
-    #{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth})
-  );
+  margin-right: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth}));
 }
 
 @mixin adaptiv-padding-right($pcSize, $mobSize) {
   $addSize: $pcSize - $mobSize;
   $maxWidth: $maxWidth - 600;
-  padding-right: calc(
-    #{$mobSize + px} + #{$addSize} * ((100vw - 600px) / #{$maxWidth})
-  );
+  padding-right: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 600px) / #{$maxWidth}));
 }
 @mixin adaptiv-padding-left($pcSize, $mobSize) {
   $addSize: $pcSize - $mobSize;
   $maxWidth: $maxWidth - 600;
-  padding-left: calc(
-    #{$mobSize + px} + #{$addSize} * ((100vw - 600px) / #{$maxWidth})
-  );
+  padding-left: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 600px) / #{$maxWidth}));
 }
