add page wrapper to layout

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -13,6 +13,10 @@
 @import 'hiring.scss';
 @import 'order.scss';
 @import 'tips.scss';
+.page {
+  max-width: 1400px;
+  margin: 0 auto;
+}
 
 body {
   display: flex;
