--- a/styles/index.scss
+++ b/styles/index.scss
@@ -33,6 +33,7 @@ body {
   font-weight: 400;
   color: $text-color-primary;
   background-color: $bc-color-white;
+  overflow-x: hidden;
 }
 
 .container {
